--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "quran",
+  "name": "quran-app",
   "version": "0.1.0",
+  "description": "",
+  "keywords": [],
   "private": true,
   "dependencies": {
+    "@formspree/react": "^2.5.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
